# aims-2026-neuroai-tutorials

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/neuroai/: __init__.py  plotting.py
tutorials/00_the_neuron_from_scratch/: 1 - the neuron.ipynb  2 - synapses.ipynb  3 - simulator.ipynb  README.md
tutorials/00_the_neuron_from_scratch/extra/: 4 - debugging.ipynb  5 - analysis.ipynb  6 - eigen.ipynb  7 - oops.ipynb  8 - version control.ipynb
tutorials/11_introduction/: what_is_neuroai.ipynb
tutorials/12_the_neuron/: neuron_and_perceptron.ipynb
tutorials/13_learning/: stdp.ipynb
tutorials/14_neural_coding/: spike_train_analysis.ipynb
tutorials/15_circuits/: lateral_inhibition.ipynb
tutorials/33_awareness/: debate.md
