[project]
name = "neuroai-tutorials"
version = "0.1.0"
description = "Python tutorials for NeuroAI course covering neural networks, AI, and computational neuroscience"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Christopher", email = "neuroai@chriscurrin.com" }]
keywords = [
    "neuroai",
    "tutorials",
    "machine-learning",
    "neuroscience",
    "jupyter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "plotly>=6.5.0",
    "torch>=2.9.1",
    "networkx>=3.0",
    "anywidget>=0.9.21",
]

[project.optional-dependencies]
snn = ["snntorch>=0.9.4"]

[dependency-groups]
dev = ["ruff>=0.1.0", "pre-commit>=3.5.0", "pytest>=7.4.0", "nbqa>=1.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroai"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tutorials/00_the_neuron_from_scratch"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "B007", # Loop control variable `<var>` not used within loop body
    "B905", # `zip()` without an explicit `strict=` parameter
    "E501", # line too long (handled by formatter)
    "E402", # module level import not at top of file
    "E741", # ambiguous variable name 'l' (lowercase letter el)
    "C408", # Unnecessary `dict()` call (rewrite as a literal)
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N816", # Variable should not be mixedCase
    "F811", # Redefinition of unused '<var>' from line <x>
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
